- Generic wxDataViewCtrl drag hint fixes (#24084).
- Ensure wxListBox best size is at least the minimum required by GTK3.
- Support setting thickness when creating wxGauge with GTK >= 3.20 (#24107).
- Fix handling binary data in wxSecretStore (Martin Corino, #24351).
- Make GTKSuppressDiagnostics(), broken since 3.2.1, work again (#24432).

wxMSW:

- Add support for line spacing and bullet style attributes to wxTextCtrl
  (Blake-Madden, #24046, #24069).
- Fix possible crash in wxFileSystemWatcher (Rick van der Sluijs, #24119).
- Fix restoring hidden top level windows (Christian Walther, #24117).
- Add support for VT_UI8 OLE VARIANT type (Miguel Gimenez, #24115).
- Fix using "Alt" when wxGrid has focus (Dietmar Schwertberger, #24247).
- Fix wxButton::GetDefaultSize() in high DPI under MSW (#24283).
- Improve native MSW dialog DPI awareness (Maarten Bent, #24196).
- Fix bug with not showing some wxStaticText labels (#24365).
- Fix button size of generic wxColourPickerCtrl in high DPI (taler21, #24456).

wxOSX:

- Fix clipping when using Sonoma/Xcode 15 SDK (#23916, #24054, #24067, #24073).
- Restore activation for non-bundled applications (#24056, #24062).
- Fix wrong tooltips for cells with custom renderers in wxDataViewCtrl (#24370).
- Fix handling of nested modal dialogs (WakA, #24418).
- Fix translations when using zh-Hans-CN locale (#24396).

wxQt:

- Fix wxAnyButton Current/Normal state confusing (David Karoly, #24129).


3.2.4: (released 2023-11-11)
----------------------------

All:

- Allow creating wxArrays from std::initializer_list (Lotendan, #23966).
- Fix regression in wxTranslations::AddCatalog() return value (#24019).

All (GUI):

- Fix possible crash when dragging pages in wxAuiNotebook (#24027).
- Fix refreshing multiple selection items in generic wxListCtrl.

wxGTK:

- Fix some regressions introduced in 3.2.3:
  * Don't crash in console apps linked with GUI libraries (#23981).
  * Fix possible crash and too high CPU use when using EGL (#24018).