@@ -313,39 +313,41 @@ public:
     // for wxTextAutoCompleteFixed.
     virtual bool ChangeCompleter(wxTextCompleter* completer) = 0;
 
-    // We should toggle off wxTE_PROCESS_ENTER flag of our wxTextEntry while
+    // We need to turn off wxTE_PROCESS_ENTER flag of our wxTextEntry while
     // the completion popup is shown to let it see Enter event and process it
     // on its own (e.g. to dismiss itself). This is done by "grab-notify" signal
     // see wxTextCtrl::OnChar()
-    void ToggleProcessEnterFlag(bool toggleOff)
+    void GTKOnPopupShown(bool shown)
     {
         wxWindow* const win = GetEditableWindow(m_entry);
 
-        long flags = win->GetWindowStyleFlag();
-        if ( toggleOff )
+        if ( shown )
         {
-            // Store the original window flags before we change them.
-            m_hadProcessEnterFlag = (flags & wxTE_PROCESS_ENTER) != 0;
-            if ( !m_hadProcessEnterFlag )
-            {
-                // No need to do anything, it was already off.
+            // If this is not the first call showing the popup, nothing to do
+            // other than updating the count.
+            if ( m_popupShownCount++ )
                 return;
-            }
 
-            flags &= ~wxTE_PROCESS_ENTER;
+            // We're showing the popup for the first time, remember if we have
+            // wxTE_PROCESS_ENTER flag.
+            m_hadProcessEnterFlag = win->HasFlag(wxTE_PROCESS_ENTER);
+
+            // And don't do anything if we don't.
+            if ( !m_hadProcessEnterFlag )
+                return;
         }
-        else // Restore the original flags.
+        else
         {
-            if ( !m_hadProcessEnterFlag )
-            {
-                // We hadn't turned it off, no need to turn it back on.
+            // If popup is still shown, nothing to do.
+            if ( --m_popupShownCount )
                 return;
-            }
 
-            flags |= wxTE_PROCESS_ENTER;
+            // Popup was hidden, restore the flag below if we had it.
+            if ( !m_hadProcessEnterFlag )
+                return;
         }
 
-        win->SetWindowStyleFlag(flags);
+        win->ToggleWindowStyle(wxTE_PROCESS_ENTER);
     }
 
     virtual ~wxTextAutoCompleteData()
@@ -376,9 +378,6 @@ protected:
         : m_entry(entry),
           m_widgetEntry(entry->GetEntry())
     {
-        // This will be really set in ToggleProcessEnterFlag().
-        m_hadProcessEnterFlag = false;
-
         GtkEntryCompletion* const completion = gtk_entry_completion_new();
 
         gtk_entry_completion_set_text_column (completion, 0);
@@ -420,9 +419,13 @@ protected:
     // And its GTK widget.
     GtkEntry* const m_widgetEntry;
 
+    // Number of times GTKOnPopupShown() was called with true argument minus
+    // the number of times it was called with false argument.
+    int m_popupShownCount = 0;
+
     // True if the window had wxTE_PROCESS_ENTER flag before we turned it off
-    // in ToggleProcessEnterFlag().
-    bool m_hadProcessEnterFlag;
+    // in GTKOnPopupShown().
+    bool m_hadProcessEnterFlag = false;
 
     wxDECLARE_NO_COPY_CLASS(wxTextAutoCompleteData);
 };
@@ -574,7 +577,7 @@ wx_gtk_entry_parent_grab_notify (GtkWidget *widget,
 {
     g_return_if_fail (GTK_IS_ENTRY(widget));
 
-    bool toggleOff = false;
+    bool shown = false;
 
     if ( gtk_widget_has_focus(widget) )
     {
@@ -584,10 +587,10 @@ wx_gtk_entry_parent_grab_notify (GtkWidget *widget,
         // shown on screen.
 
         if ( !was_grabbed )
-            toggleOff = true;
+            shown = true;
     }
 
-    data->ToggleProcessEnterFlag(toggleOff);
+    data->GTKOnPopupShown(shown);
 }
 
 } // extern "C"
